Acabe la interface

--- a/winTwoPlays/winTwoPlays.csproj
+++ b/winTwoPlays/winTwoPlays.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classArchivo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +79,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="images\imagen_va.png" />
+    <Content Include="images\imagen_vacia.png" />
+    <Content Include="images\rs232.jpg" />
+    <Content Include="images\vacio.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
