--- a/winTwoPlays/winTwoPlays.csproj
+++ b/winTwoPlays/winTwoPlays.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClasePrioridad.cs" />
     <Compile Include="claseSendRecive.cs" />
     <Compile Include="classArchivo.cs" />
+    <Compile Include="ColaPrioridad.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
